fix for socials on mob not vertically aligned

--- a/_sass/global.sass
+++ b/_sass/global.sass
@@ -287,6 +287,7 @@ $svg-text-offset: 60px
   display: flex
   padding: 0
   margin: 0
+  line-height: 0
 
 .social-media-item
   list-style: none
